--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,31 @@
 ---
-layout: default
-title: Neat Starter
-path: home
+layout: blog
 ---
 
-<div class="container mx-auto lg:h-screen flex flex-col justify-center items-center">
-  <h1>
-    Welcome to
-    <strong class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-purple-500">
-      {{title}}
-    </strong>
-  </h1>
+<section class="mt-15">
+  {% set postslist = collections.post %} {% for post in postslist | reverse %}
+  <article class="my-8 text-gray-300">
+    <h2 class="font-bold text-3xl text-gray-100 mb-2">
+      <a href="{{ post.url | url }}">
+        {% if post.data.title %} {{ post.data.title }} {% else %} Untitled {%
+        endif %}
+      </a>
+    </h2>
+    <p class="text-base leading-6 text-sky-200 mb-3">
+      <time>
+        {{ post.date | readableDate }} by
+        <a>{{ post.data.author }}</a>
+      </time>
+    </p>
+    {% if post.data.description %}
+    <p class="text-lg text-gray-300 mb-3">{{ post.data.description }}</p>
+    {% endif %}
 
-  <p>
-    <abbr title="netlify cms, eleventy, alpine js & tailwind css">NEAT</abbr>
-    Starter Template. Get Started by editing.
-    <code class="bg-gray-100 text-blue-800 p-1">/index.njk</code>
-  </p>
-
-  {% include "./_includes/partials/content.html" %}
-</div>
+    <p>
+      <a href="{{ post.url | url }}" class="text-sky-400 font-bold text-lg">
+        Read more →
+      </a>
+    </p>
+  </article>
+  {% endfor %}
+</section>
