style(blog.html): change h3 tag to h2 tag for better semantic structure feat(default.html): add meta description tag for SEO purposes style(footer.html): update footer style and remove unnecessary content
style(navbar.html, posts.html, contact/index.html): update color scheme and formatting

style(index.html): change text color of "Read more" link to text-sky-300
style(press/index.html): change text color of press link titles to text-sky-300
style(tailwind.css): add min-height of 100vh to body element and change color of links in prose class to text-sky-300

--- a/src/contact/index.html
+++ b/src/contact/index.html
@@ -46,7 +46,7 @@ title: Contact
           </label>
           <input
             class="appearance-none block w-full bg-gray-200 text-gray-800 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-            for="grid-name"
+            id="grid-name"
             name="name"
             type="text"
             required
@@ -102,7 +102,7 @@ title: Contact
       </div>
       <div class="flex flex-wrap mb-6">
         <button
-          class="bg-sky-600 hover:bg-sky-500 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+          class="bg-sky-700 hover:bg-sky-300 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
           type="submit"
         >
           Submit
