style(about/index.html): reformat paragraphs to remove nested div and use single p tags
style(contact/index.html): add prose class to container div

--- a/src/contact/index.html
+++ b/src/contact/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Contact
 ---
 
-<div class="container max-w-4xl mt-6 px-6">
+<div class="container max-w-4xl mt-6 px-6 prose">
   <h1 class="font-bold text-5xl pb-5 mb-5 border-sky-500 border-b">
     {{title}}
   </h1>
