--- a/src/about/index.html
+++ b/src/about/index.html
@@ -4,43 +4,46 @@ title: About Mac
 ---
 
 <div class="container max-w-4xl mt-6 px-6 prose">
-  <h1 class="font-bold text-5xl pb-5 mb-5 border-sky-500 border-b">
-    {{title}}
-  </h1>
-  <p>
-    By continuing to focus on outcomes and facts, Mac believes that we can
-    continue to build a truly united and prosperous Detroit where differences of
-    opinion are cause for collaboration, not recrimination.
-  </p>
-  <p>
-    Mac was born in South Haven in the early 1980s and grew up in Jackson in the
-    1990s. Graduating in 2003 from Michigan State University&#39;s James Madison
-    College with dual degrees in international relations and Russian language
-    and literature, Mac worked in the financial services sector in New York for
-    nearly a decade before moving to Detroit in 2012.
-  </p>
-  <p>
-    Starting in a volunteer position on Mike Duggan&#39;s initial campaign for
-    mayor in 2013, Mac worked for the Mayor and the City for nearly three years,
-    starting as a phone bank volunteer, finishing the campaign as finance
-    director, and working through Detroit&#39;s Chapter 13 municipal bankruptcy
-    in the area of operational restructuring. From working on projects related
-    to income taxes to EMS response time to public lighting to infrastructure.
-  </p>
-  <p>
-    Having lived on the east side since 2014 and in Pingree Park since 2019, Mac
-    has been a member and leader of the Indian Village Association (former board
-    member), Pingree Park Association (founding President), Indian Village
-    Tennis Club (former board member), employed by the Villages Community
-    Development Corporation (current executive director), Jefferson Avenue
-    Presbyterian Church (current member). His work in advocacy has directly led
-    to the deployment of speed humps throughout Detroit, the clearing out of
-    hundreds of alleys, and getting many different pieces of infrastructure
-    fixed (sidewalks, trees, utility issues, etc.).
-  </p>
-  <p>
-    By continuing to focus on outcomes and facts, Mac believes that we can
-    continue to build a truly united and prosperous Detroit where differences of
-    opinion are cause for collaboration, not recrimination.
-  </p>
+	<h1 class="font-bold text-5xl pb-5 mb-5 border-sky-500 border-b">
+		{{title}}
+	</h1>
+	<p>
+		Mac grew up in Jackson, Michigan. Attending Michigan State University’s
+		James Madison College, he graduated in 2003 with dual degrees in
+		international relations and Russian language and literature. He worked in
+		the financial services sector in New York for nearly a decade before moving
+		back to Detroit in 2012.
+	</p>
+
+	<p>
+		Starting in a volunteer position in Mike Duggan’s campaign in 2013, he
+		started as a phone bank volunteer, and ended as finance director for the
+		campaign. He joined the mayoral administration in 2014 and worked through
+		the bankruptcy on operational restructuring, focusing on topics such as EMS
+		response time, income tax collection, infrastructure and blight reduction.
+		Since joining the Villages Community Development Corporation in 2015, he has
+		raised over two million dollars, put forth a clear strategy to stabilize and
+		grow our neighborhoods on the east side of Detroit, and pioneered new
+		infrastructure and development work, including nagging the city to roll out
+		speed humps and clear out alleys for years.
+	</p>
+
+	<p>
+		Not knowing what he was doing, Mac bought a house in 2014, and moved to
+		Pingree Park in 2019. In addition to his day job with the Villages CDC, he
+		has renovated six houses in West Village, Indian Village and Pingree Park,
+		and is looking to develop larger commercial project as well. Mac is
+		currently the Vice President of the Pingree Park Association, executive
+		director of the Villages Community Development Corporation, is a member of
+		the Indian Village Tennis Club, the Detroit Athletic Club and Jefferson
+		Avenue Presbyterian Church.
+	</p>
+
+	<p>
+		Mac believes that Detroit deserves the same kind of services and
+		infrastructure that other municipalities have to keep existing residents and
+		attract new, that our politics is truly broken at almost every level of
+		government, and that by focusing on peoples’ actual needs, rather than
+		shouty identity politics, you can rebuild your community.
+	</p>
 </div>
